--- a/app.json
+++ b/app.json
@@ -1,16 +1,16 @@
 {
-      "name": "Asuna Robot",
+      "name": "Botnyilayreally",
       "description": "A Powerful  Telegram group management bot.",
       "keywords": [
          "telegram",
          "advance",
          "group",
          "manager",
-         "Asuna"
+         "nyilay"
       ],
     
-   "logo":    "https://telegra.ph/file/4977514f30ff13c11363b.jpg",  
-   "repository": "https://github.com/HuntingBots/AsunaRobot",
+   "logo":    "https://telegra.ph/file/d7a1849c6008f99e1b66c.jpg",  
+   "repository": "https://github.com/thantzan212/nyilaybotreally",
    "addons": [
           {
          "options": {
@@ -43,7 +43,7 @@
       "OWNER_ID": {
          "description": "Your user ID as an integer.",
          "required": true,
-         "value": "1606221784"
+         "value": ""
      },
 
       "REDIS_URL": {
@@ -71,12 +71,12 @@
 
       "OWNER_USERNAME": {
          "description": "Your username without the @",
-         "value": "The_Ghost_Hunter"
+         "value": "omegapornf"
       },
       "SUPPORT_CHAT": {
          "description": "Your Telegram support group chat username where your users will go and bother you with shit But be like: MyGroupChatUsernameBlah. If this ever points to masha support than consider you made an enemy.",
          "required": true,
-         "value": "AsunaRobotSupport"
+         "value": "t.me/+-Gsapl_ciLYwMGNl"
       },
       "MONGO_DB_URI": {
          "description": "Required for database connections.",
@@ -94,12 +94,12 @@
      "EVENT_LOGS": {
          "description": "Event logs channel to note down important bot level events, recommend to make this public. ex: '-123456'",
          "required": true,
-         "value": "@AsunaLogUpdate"
+         "value": "@n4vpnpro"
       },
       "JOIN_LOGGER": {
          "description": "A channel where bot will print who added it to what group, useful during debugging or spam handling.",
          "required": true,
-         "value": "@AsunaLogUpdate"
+         "value": "@n4vpnpro"
       },      
       "CASH_API_KEY": {
          "description": "Required for currency converter. Get yours from https://www.alphavantage.co/support/#api-key",
